--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@ body {
     padding-bottom: 3rem;
     color: #ffffff;
     background-color: rgb(26, 36, 38);
+    font-family: alice, Arial, Helvetica, sans-serif; 
   }
 .navbar-custom{
     background-color: rgb(12, 24, 26);
