--- a/index.css
+++ b/index.css
@@ -18,6 +18,9 @@ body {
 a {
   color: bisque;
 }
+.btn{
+  background-color: cadetblue;
+}
   /* CUSTOMIZE THE CAROUSEL
   -------------------------------------------------- */
   
